--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#"><img src="./Images/clipart1081569.png" alt="nine-dots"></a>
         <a href="#"><img src="./Images/pngaaa.com-25555.png" alt="" id="circle" type="img+xml" style="border-radius: 50%;"></a>
     </div>
-    <h2><span style="color: blue; font-size: 100px;">G</span><span style="color: red;">o</span><span style="color: yellow;">o</span><span style="color: blue;">g</span><span style="color: green;">l</span><span style="color: red;">e</span></h2>
+    <h2><span style="color: #4285F4; font-size: 100px;">G</span><span style="color: #EA4335;">o</span><span style="color: #FBBC05;">o</span><span style="color: #4285F4;">g</span><span style="color: #34A853;">l</span><span style="color: #EA4335;">e</span></h2>
     <label class="input">
         <input type="text" id="search" placeholder="Search Google or type a URL">
       </label>
